--- a/main.html
+++ b/main.html
@@ -9,11 +9,22 @@
 <script src="js/app.js"></script>
 </head>
 <body>
+	<audio autoplay>
+  <source src="sound/theme.mp3" type="audio/mpeg">
+</audio>
+	<div class="logo"><img src="images/Street_fighter_logo.png"></div>
+	<div class="play">
+		<h1>How to Play</h1>
+		<p>Ready? : Hover</p>
+		<p>Hadouken : Click</p>
+		<p>Look Cool : Click x</p>
+	</div>
 <div class="main">
 	<div class="ryu">
 	<div class="ryu-still"></div>
 	<div class="ryu-ready"></div>
 	<div class="ryu-throwing"></div>
+	<div class="ryu-cool"></div>
 	<audio id="hadouken-sound" src="sound/hadouken.mp3">
 </div>
 
